backup_individuals/sjeng/use_undefined_identifier/c0/is_attacked
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:648:8: error: use of undeclared identifier 'is_attacked_bishop_o'
ndir = is_attacked_bishop_o[i]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:667:12: error: use of undeclared identifier 'is_attacked_knight_o'
if ( board[is_attacked_knight_o[ia] + square] == 3 ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:672:9: error: use of undeclared identifier 'is_attacked_rook_o'
ndira = is_attacked_rook_o[ib]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:693:9: error: use of undeclared identifier 'is_attacked_bishop_o'
ndirb = is_attacked_bishop_o[ic]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:712:12: error: use of undeclared identifier 'is_attacked_knight_o'
if ( board[is_attacked_knight_o[id] + square] == 4 ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:717:9: error: use of undeclared identifier 'is_attacked_rook_o'
a_sqc = is_attacked_rook_o[ie] + square; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/attacks.c:727:10: error: use of undeclared identifier 'is_attacked_rook_o'
a_sqc += is_attacked_rook_o[ie]; 
         ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/is_attacked/src/obj/attacks.o] Error 1
